--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "axios": "1.6.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^2.16.1",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^8.0.3",
