trophy emoji and changing web name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "SuperIdea",
-  "name": "Create React App Sample",
+  "short_name": "ScholarShareNet",
+  "name": "ScholarShareNet",
   "icons": [
     {
       "src": "favicon.png",
