--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "superidea-client",
   "version": "1.0.0",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "1.6.0",
     "bootstrap": "^5.3.3",
