--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "1.6.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^2.16.1",
+    "emailjs-com": "^3.2.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
