--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
