--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.12",
     "axios": "1.6.0",
     "bootstrap": "^5.3.3",
